--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Granny's Greenhouse</title>
+    <script src="https://kit.fontawesome.com/ceadfc1162.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/styles.css" type="text/css" />
   </head>
   <body>
@@ -13,26 +14,22 @@
         </a>
       </div>
       <div id="phone">
-        <a href="#">(555)123-5555</a>
+        <a href="tel:#">(555)123-5555</a>
       </div>
       <div id="social">
-        <a href="#" target="_blank">
-          <img src="images/email.png" alt="email icon"
-        /></a>
-        <a href="https://www.facebook.com/" target="_blank"
-          ><img src="images/facebook.png" alt="Facebook Icon"
-        /></a>
+        <a href="mailto:sij233@email.vccs.edu" target="_blank"><i class="fa-regular fa-envelope"></i>
+          </a>
+        <a href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-square-facebook"></i></a>
         <a href="https://www.instagram.com/" target="_blank"
-          ><img src="images/instagram.png" alt="Instagram Icon"
-        /></a>
+          ><i class="fa-brands fa-instagram"></i></a>
       </div>
       <nav>
         <ul>
           <li><a href="about.html">About</a></li>
-          <li><a href="#inventory">Inventory</a></li>
-          <li><a href="#design">Design</a></li>
-          <li><a href="#visit">Visit</a></li>
-          <li><a href="#contact">Contact</a></li>
+          <li><a href="inventory.html">Inventory</a></li>
+          <li><a href="design.html">Design</a></li>
+          <li><a href="visit.html">Visit</a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
     </header>
@@ -48,30 +45,28 @@
       </div>
       <div id="location">
         <h2>Location</h2>
-        <a href="#">123 Street Road Dr. Midlothian, 23223</a>
+        <a href="https://google.com">123 Street Road Dr. Midlothian, 23223</a>
       </div>
-      <!-- Consultation Button-->
       <div id="consultation">
         <a href="consultation.html">Schedule a Consultation</a>
       </div>
     </section>
     <footer>
       <div id="phonefoot">
-        <a href="#">(555)123-5555</a>
+        <a href="tel:#">(555)123-5555</a>
       </div>
       <div id="sfoot">
-        <a href="#" target="_blank">
-          <img src="images/email.png" alt="email icon"
-        /></a>
-        <a href="https://www.facebook.com/" target="_blank"
-          ><img src="images/facebook.png" alt="facebook icon"
-        /></a>
-        <a href="https://www.instagram.com/" target="_blank"
-          ><img src="images/instagram.png" alt="instagram icon"
-        /></a>
+        <div id="social">
+          <a href="mailto:sij233@email.vccs.edu" target="_blank"><i class="fa-regular fa-envelope"></i>
+            </a>
+          <a href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-square-facebook"></i></a>
+          <a href="https://www.instagram.com/" target="_blank"
+            ><i class="fa-brands fa-instagram"></i></a>
       </div>
       <div id="footlogo">
-        <img src="images/logo.png" alt="Granny's Greenhouse Logo" />
+        <a href="index.html">
+          <img src="images/logo.png" alt="Granny's Greenhouse Logo" />
+        </a>
       </div>
     </footer>
   </body>
