--- a/visit.html
+++ b/visit.html
@@ -53,13 +53,12 @@
         </div>
         <br>
         <br>
-        <video width="65%" height="65%" controls="controls" poster="images/visit.jpg">
+        <video width="320" height="240" controls="controls" poster="images/visit.jpg">
           <source src="media/visit-video.mp4" type="video/mp4" />
           <!-- <source src="video.webm" type="video/webm" />
           <source src="video.ogg" type="video/ogg" /> -->
           Your browser does not support the HTML5 video element.
         </video>
-      </div>
       </section>
     <footer>
       <div id="phonefoot">
