--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
         <p>M-Th: 10am - 2pm</p>
         <p>Call ahead visits are welcome!</p>
       </div>
-      <div id="location">
+      <div class="body" id="location">
         <h2>Location</h2>
-        <a href="https://google.com">123 Street Road Dr. Midlothian, 23223</a>
+        <a href="https://goo.gl/maps/RL6jKTvwLhrxSB8W8">123 Street Road Dr. Midlothian, 23223</a>
       </div>
       <div id="consultation">
         <a href="consultation.html">Schedule a Consultation</a>
