--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       </div>
       <div class="body" id="location">
         <h2>Location</h2>
-        <a href="https://goo.gl/maps/RL6jKTvwLhrxSB8W8">123 Street Road Dr. Midlothian, 23223</a>
+        <a href="https://goo.gl/maps/RL6jKTvwLhrxSB8W8" target="_blank">123 Street Road Dr. Midlothian, 23223</a>
       </div>
       <div id="consultation">
         <a href="consultation.html">Schedule a Consultation</a>
